--- a/apps/@www/app/package.json
+++ b/apps/@www/app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
+    "format": "biome format --write ./src",
+    "lint": "biome lint ./src",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,14 +16,10 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
