--- a/apps/@www/app/package.json
+++ b/apps/@www/app/package.json
@@ -11,16 +11,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "@vanilla-extract/css": "1.15.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "6.23.1"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.0",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "@types/react": "18.2.66",
+    "@types/react-dom": "18.2.22",
+    "@vanilla-extract/vite-plugin": "4.0.10",
+    "@vitejs/plugin-react": "4.2.1",
+    "typescript": "5.2.2",
+    "vite": "5.2.0"
   }
 }
