fix(@www/server): use exact semver rather than latest

--- a/apps/@www/server/package.json
+++ b/apps/@www/server/package.json
@@ -32,10 +32,10 @@
   },
   "devDependencies": {
     "@pkg-tools/build": "1.0.2",
-    "@pkg-tools/clean": "latest",
-    "@pkg-tools/config": "latest",
-    "@pkg-tools/format": "latest",
-    "@pkg-tools/lint": "latest",
+    "@pkg-tools/clean": "1.0.1",
+    "@pkg-tools/config": "1.0.8",
+    "@pkg-tools/format": "1.0.5",
+    "@pkg-tools/lint": "1.0.7",
     "@types/express": "4.17.21",
     "@types/serve-static": "1.15.7",
     "compression": "1.7.4",
