--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "commit": "cz",
     "release": "pnpm publish -r --access public"
   },
-  "packageManager": "pnpm@9.1.4",
+  "packageManager": "pnpm@10.18.1",
   "devDependencies": {
+    "@anthropic-ai/claude-code": "^2.0.21",
     "@changesets/cli": "2.27.1",
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
@@ -27,6 +28,6 @@
     "cz-conventional-changelog": "3.3.0",
     "cz-git": "1.8.0",
     "syncpack": "12.0.1",
-    "turbo": "2.0.1"
+    "turbo": "^2.5.8"
   }
 }
