feat(@www/app): add SSG and fix the hydration issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,7 +49,7 @@ jobs:
         run: pnpm install
 
       - name: Build
-        run: pnpm build
+        run: pnpm --filter @www/app build:ssg
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
